--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -26,6 +26,6 @@
         android:fontFamily="sans-serif-condensed"
         android:gravity="center"
         android:textColor="@color/text_color_primary"
-        android:text="GeoTone Menu"
+        android:text="@string/geotone_menu"
         android:textSize="24sp" />
 </LinearLayout>
