--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -17,6 +17,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints"
+        app:cardBackgroundColor="@color/colorBackground"
         app:cardElevation="10dp"
         app:cardUseCompatPadding="true">
 
@@ -36,12 +37,12 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:layout_gravity="center"
-                android:text="GeoTone"
+                android:text="@string/geotone"
                 android:textColor="@color/text_color_primary"
                 android:textAllCaps="false"
-                android:textSize="20dp" />
+                android:textSize="20sp" />
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
@@ -52,6 +53,7 @@
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="163dp"
         app:cardElevation="10dp"
+        app:cardBackgroundColor="@color/colorBackground"
         app:cardUseCompatPadding="true">
 
         <LinearLayout
