--- a/app/src/main/res/layout/card_view_task.xml
+++ b/app/src/main/res/layout/card_view_task.xml
@@ -43,7 +43,7 @@
                 android:layout_marginBottom="8dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="8dp"
-                android:text="Task Title"
+                android:text="@string/task_title"
                 android:textAllCaps="false"
                 android:textColor="@color/text_color_primary"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -69,7 +69,7 @@
                     android:textColor="@color/text_color_primary"
                     android:layout_marginBottom="4dp"
                     android:textAllCaps="false"
-                    android:text="Date : 2018/02/14"/>
+                    android:text="@string/date_2018_02_14"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -77,7 +77,7 @@
                     android:id="@+id/txt_cv_task_time"
                     android:textColor="@color/text_color_primary"
                     android:textAllCaps="false"
-                    android:text="Time : 12:35 AM"/>
+                    android:text="@string/time_12_35_am"/>
 
             </LinearLayout>
 
